# norris

./: .gitignore  .pre-commit-config.yaml  LICENSE  app.py  config.py  pyproject.toml  requirements.txt
app/: __init__.py  forms.py
app/norriss/: __init__.py
app/templates/: base.html
tests/: conftest.py
tests/functional/: test_home_page.py
